welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: Missing closing brace `}' assumed here
def finale():Boolean = {
^