welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {

def finale():Boolean = {
	if (getX() == getMondeLargeur() && getY() ==  getMondeHauteur() ) return true
	else return false
}

def avancer() {
var x=0	
var y=0
	while ( getY() != getMondeHauteur() ) {
	setPos(x, y)
	y=y+1
	}
	y=0
	x=x+1
}

setPos(0,0)
while ( finale != true ) 
avancer()